Card body background color change

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@
   }
   .card-body {
     margin-top: 6px;
-    background: #000;
+    background: #24232D;
     text-align: center;
     color: #fff;
     font-size: 25px;
