--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
  }
  .standard-price-bgcolor{
     background: url(assets/img/standard-tag.png);
+    position: relative;
  }
  .standard-cus-footer-bg{
     background: transparent linear-gradient(90deg, #00B3EF 0%, #008CE8 100%) 0% 0% no-repeat padding-box;
@@ -46,7 +47,21 @@
     box-shadow: 0px 3px 12px #00000033;
  }
 
-
+ .populat-tag {
+  position: absolute;
+  right: 1px;
+  width: 76px;
+  height: 23px;
+  background: #24232D;
+  color: #fff;
+  font-size: 13px;
+  line-height: 17px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  top: 8.5px;
+}
 
 
 .price-custom-header {
@@ -74,7 +89,7 @@
     justify-content: center;
     align-self: center;
     text-align: center;
-    width: 100%;
+    width: 100.3%;
     margin-top: 6px;
     background-size: cover;
     background-repeat: no-repeat;
